--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#about">About</a>
     </div>
 </div>
-<h1>Pigeon boo HIIIIII</h1>
+<h1>Pigeon </h1>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
