--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 <div class="header">
-    <a href="#default" class="logo">CompanyLogo</a>
+    <a href="#default" class="logo">Pigeon</a>
     <div class="header-right">
-        <a class="active" href="#home">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="#home">Profile</a>
+        <a href="#contact">Feed</a>
+        <a href="#about">Login</a>
     </div>
 </div>
 <h1>Pigeon </h1>
