--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="style.css" >
 
-    <title>Hello, world! Jetzt gehts los:) Tim</title>
+    <title>Pigeon inc.</title>
 </head>
 <body>
 <div class="header">
