--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Pigeon inc.</title>
 </head>
 <body>
+
+<div class="parallax"></div>
+
 <div class="header">
     <a href="#default" class="logo">Pigeon</a>
     <div class="header-right">
