--- a/Benutzerprofil(1).html
+++ b/Benutzerprofil(1).html
@@ -156,14 +156,17 @@
         </div>
     </div>
 
-
-
         <div class="form-group row">
             <label for="username" class="col-4 col-form-label">Projekte</label>
             <label for="gebdat">
                 <input type="date" id="gebdat">
             </label>
         </div>
+
+</div>
+    <button type="button" class="btn btn-primary">Speichern</button>
+</div>
+
 
     <div id="ArbeitundAusbildung" style= "font-family:'Arial Black'; font-weight: bold; text-align:center;">
         <h1>Arbeit und Ausbildung</h1>
@@ -185,6 +188,7 @@
                         <input type="date" id="gebdat">
                     </label>
                 </div>
+
 
         </div>
         <button type="button" class="btn btn-primary">Speichern</button>
