--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
         .parallax {
             /* The image used */
-            background-image: url("wald.jpg");
+            background-image: url("pictures/wald.jpg");
 
             min-height: 300px;
 
