--- a/passwords/Benutzerprofil.html
+++ b/passwords/Benutzerprofil.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mein Profil</title>
+    <title>Mein Profil !</title>
 </head>
 
 <head>
