--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Benutzerprofil(1).php">Profil</a>
+                <a class="nav-link" href="Benutzerprofil.php">Profil</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
