--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="index.php">
         <i style="font-family:'Arial Black'; font-weight: bold; text-align:center;">PIGEON</i>
     </a>
 
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.php">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="Benutzerprofil.php">Profil</a>
@@ -44,10 +44,13 @@
                 <a class="nav-link disabled" href="#">ausgeblendet</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <form method="post" action="phpfiles/logout.php">
+            <button type="submit">Logout</button>
+        </form>
+       <!-- <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Suchen" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Los!</button>
-        </form>
+        </form>-->
     </div>
 </nav>
 
