--- a/header.html
+++ b/header.html
@@ -47,10 +47,10 @@
         <form method="post" action="phpfiles/logout.php">
             <button type="submit">Logout</button>
         </form>
-       <!-- <form class="form-inline my-2 my-lg-0">
+       <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Suchen" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Los!</button>
-        </form>-->
+        </form>
     </div>
 </nav>
 
