--- a/header.html
+++ b/header.html
@@ -47,8 +47,8 @@
         <form method="post" action="phpfiles/logout.php">
             <button type="submit">Logout</button>
         </form>
-       <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Suchen" aria-label="Search">
+       <form class="form-inline my-2 my-lg-0" method="get" action="do_suchen.php">
+            <input class="form-control mr-sm-2" type="search" placeholder="Suchen" aria-label="Search" name="searchbox">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Los!</button>
         </form>
     </div>
