--- a/header.html
+++ b/header.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+<!--
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.php">
         <i>k</i>
@@ -55,5 +56,56 @@
     </div>
 </nav>
 
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.php">
+                <img alt="Logo" src="Logos/Logo-Blau.png" style="display:inline" width="30" height="30">
+            </a>
+            <form class="nav navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Suchen">
+                </div>
+                <button type="submit" class="btn btn-default">Los</button>
+            </form>
+        </div>
+    </div>
+</nav>
+-->
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Navigation ein-/ausblenden</span>
+                <span class="icon-bar" style="background-color: #0068ff;"></span>
+                <span class="icon-bar" style="background-color: #0068ff;"></span>
+                <span class="icon-bar" style="background-color: #0068ff;"></span>
+            </button>
+            <a class="navbar-brand" href="index.php">
+                <img alt="Logo" src="Logos/Logo-Blau.png" style="display:inline" width="30" height="30">
+            </a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+            </ul>
+
+            <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Suchen">
+                </div>
+                <button type="submit" class="btn btn-default">Los</button>
+            </form>
+            <form class="navbar-form navbar-right" role="logout">
+            <button type="submit" class="btn btn-default">Logout</button>
+        </form>
+        </div>
+        </div>
+    </div>
+</nav>
 </body>
 </html>
