--- a/Übung Stylen.html
+++ b/Übung Stylen.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Formular-Beispiel</title>
-    <link rel="stylesheet" type="text/css" href="meinstyle.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,700i" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <div style="margin-left: auto; margin-right:auto; width: 700px">
 </head>
 <body>
