--- a/header.html
+++ b/header.html
@@ -91,7 +91,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">Benutzerprofil</a></li>
+                <li><a href="Benutzerprofil.php">Benutzerprofil</a></li>
                 <li><a href="#">Link</a></li>
             </ul>
 
