--- a/header.html
+++ b/header.html
@@ -92,7 +92,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="Benutzerprofil.php">Benutzerprofil</a></li>
-                <li><a href="#">Link</a></li>
+                <li><a href="News">Link</a></li>
             </ul>
 
             <form class="nav navbar-form navbar-right" method="get" action="do_suchen.php" role="search">
